<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/getBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/getBtn"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.526" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="308dp"
        android:layout_height="381dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Rad8MM"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Rad10MM"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginTop="32dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Rad12MM"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton16"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Rad16MM"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginTop="32dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Rad20MM"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton25"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Rad25MM"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:text="@string/SelectDayameter"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/pis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.526" />

</androidx.constraintlayout.widget.ConstraintLayout>