<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weight">

    <TextView
        android:id="@+id/weight5"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="@string/pis1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pise"
        app:layout_constraintEnd_toStartOf="@+id/p3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight4"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/p3"
        android:singleLine="true"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2" />

    <TextView
        android:id="@+id/weight4"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="92dp"
        android:inputType="number"
        android:layout_marginRight="92dp"
        android:text="@string/Inch"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/p2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight3" />

    <EditText
        android:id="@+id/p2"
        android:singleLine="true"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1" />

    <TextView
        android:id="@+id/weight3"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="@string/foot"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pise"
        app:layout_constraintEnd_toStartOf="@+id/p1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/p1"
        android:singleLine="true"
        android:text="0"

        android:layout_width="168dp"
        android:layout_height="43dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonnxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p3"
        app:layout_constraintVertical_bias="0.231" />
</androidx.constraintlayout.widget.ConstraintLayout>